Finaly fixed visibility of Mastodon Link

--- a/assets/css/style obsidian.css
+++ b/assets/css/style obsidian.css
@@ -1196,6 +1196,10 @@ img[src*='#center'] {
     font-weight: 700;
 }
 
+#p-socials a {
+    display: inline;
+}
+
 /* IE-SPECIFIC STYLING */
 
 
